[gd_scene load_steps=3 format=3 uid="uid://model_item_uid"]

[ext_resource type="Script" path="res://pages/settings/model_management/ModelItem.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
content_margin_left = 32.0
content_margin_top = 24.0
content_margin_right = 32.0
content_margin_bottom = 24.0
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="ModelItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 140)
offset_right = 1016.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StatusIndicator" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 1
color = Color(0.5, 0.5, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "DeepSeek-V3"

[node name="APICountLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.53, 0.53, 0.53, 1)
theme_override_font_sizes/font_size = 20
text = "0 个配置"

[node name="ManageBtn" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "管理 API"
